--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "annect",
   "version": "1.0.0",
   "main": "src/index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "start": "nodemon src/index.js",
     "postinstall": "prisma generate && prisma db seed"
   },
   "prisma": {
