--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/index.js",
-    "postinstall": "prisma generate && prisma db seed"
+    "postinstall": "prisma generate && prisma db push && prisma db seed"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
